# inirs

./: Cargo.toml  README.md
src/: crates.rs  flags.rs  main.rs  snippets.rs
