[package]
name = "inirs"
authors = ["nerd"]
license = "MIT"
description = "A simple command line task manager"
homepage = "https://github.com/nobel-von-it/inirs.git"
repository = "https://github.com/nobel-von-it/inirs.git"
readme = "README.md"
categories = ["command-line-utilities"]
version = "0.1.6"
edition = "2021"


[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
